--- a/Client/src/Components/Stylesheets/Appinfo.css
+++ b/Client/src/Components/Stylesheets/Appinfo.css
@@ -85,16 +85,16 @@
   }
 
  .Android-play-store{
-  height: 60px;
+  height: 9vh;
   width: auto;
-  margin: 0 10px  ;
+  /* margin: 0 2px  ; */
   
  }
  .ios-play-store{
-  height: 40px;
+  height: 7vh;
   width: auto;
-  margin: 0 10px;
-  margin-right: 120px;
+  /* margin: 0 2px; */
+
  }
   
   .app-store-logo {
@@ -129,6 +129,21 @@
    margin-top: 40px;
     object-fit: cover;
   }
+
+  .Android-play-store{
+    height: 5cqh;
+    width: auto;
+    /* margin: 0 2px  ; */
+    
+   }
+   .ios-play-store{
+    height: 3vh;
+    width: auto;
+    /* margin: 0 2px; */
+  
+   }
+
+
   .app-store-logo {
     width: 30%;
     margin: 10px 0;
