--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1,3 +1,7 @@
+*{
+  background-color: rgb(255, 255, 255);
+}
+
 .notification-badge {
   cursor: pointer;
   margin-right: 15px;
@@ -167,15 +171,6 @@
     margin-bottom: 5px; /* Adjust spacing between menu items */
   }
 }
-
-
-
-
-
-
-
-
-
 
 /* -----------------------------Navbar End----------------------------- */
 
@@ -446,8 +441,12 @@
 
 /* Footer */
 
+.footer, .footer * {
+  background-color: #f3eeee; /* Silver-like color for the entire footer */
+  color: #010101; /* Text color for better contrast */
+}
+
 .footer {
-  background-color: #f1f1f1;
   padding: 20px;
   margin-bottom: -26px;
 }
@@ -463,7 +462,7 @@
 .footer-column {
   flex: 1;
   margin: 10px;
-  min-width: 200px; /* Ensure columns have a minimum width */
+  min-width: 200px;
 }
 
 .footer-column h3 {
@@ -471,9 +470,9 @@
 }
 
 .footer-column ul {
-  list-style-type: none; /* Removes default bullet points */
-  padding: 0; /* Removes default padding */
-  margin: 0; /* Removes default margin */
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 .footer-column ul li {
@@ -481,12 +480,12 @@
 }
 
 .footer-column a {
-  text-decoration: none; /* Removes the underline */
-  color: inherit; /* Inherits the color from parent element */
+  text-decoration: none;
+  color: inherit;
 }
 
 .footer-column a:hover {
-  color:  rgb(20, 78, 101); /* Optional: change link color on hover */
+  color: rgb(20, 78, 101);
 }
 
 .social-icons {
@@ -496,11 +495,11 @@
 
 .social-icons a {
   color: inherit;
-  font-size: 1.5em; /* Adjust size as needed */
+  font-size: 1.5em;
 }
 
 .social-icons a:hover {
-  color:  rgb(20, 78, 101); /* Optional: change icon color on hover */
+  color: rgb(20, 78, 101);
 }
 
 .Copyright-section {
@@ -508,6 +507,7 @@
   margin-top: 20px;
   border-top: 2px solid rgb(105, 199, 199);
   padding-top: 10px;
+  color: inherit;
 }
 
 .copyright {
@@ -515,7 +515,6 @@
 }
 
 .website-name {
-  color: rgb(20, 78, 101);
   font-weight: bold;
 }
 
@@ -544,19 +543,11 @@
   height: 10px;
   background-color: #337ab7;
   border-radius: 50%;
-  margin-top: -5px; /* adjust the vertical alignment */
+  margin-top: -5px;
 }
 
-.footer-list-item:before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 10px;
-  width: 10px;
-  height: 10px;
-  background-color: #337ab7;
-  border-radius: 50%;
-}
+
+
 
 
 
