--- a/Client/src/Components/Stylesheets/Appinfo.css
+++ b/Client/src/Components/Stylesheets/Appinfo.css
@@ -9,7 +9,7 @@
     width: 72%;
     margin: 40px auto;
     padding: 20px;
-    background-color: #f7f7f7;
+    background-color: #ffffff;
     border: 1px solid #ddd;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
